@@ -32,4 +32,7 @@ extern UV   power_factor(mpz_t n, mpz_t f);
 
 extern mpz_t* divisor_list(int* ndivisors, mpz_t n);
 
+extern int is_smooth(mpz_t n, mpz_t k);
+extern int is_rough(mpz_t n, mpz_t k);
+
 #endif
